@@ -1,3 +1,8 @@
+2012-02-06  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-sum.el (gnus-summary-exit-no-update): Really deaden the summary
+	buffer if `gnus-kill-summary-on-exit' is nil.
+
 2012-02-05  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* nnimap.el (nnimap-open-server): Allow switching the nnoo server
